pom.xml: Spring-Boot hinzugefügt